# ScrapeWebdriver

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  scrape_webdriver.py  setup.py
scrape_webdriver/: __init__.py
scrapy_webdriver/: __init__.py  extension_creator.py  middlewares.py  scrapy_webdriver.py
scrapy_webdriver/anticaptcha_plugin/: anticaptcha-plugin_v0.56.xpi
scrapy_webdriver/extension/: manifest.json
scrapy_webdriver/extensions/: anticaptcha-plugin.xpi
scrapy_webdriver/middleware_utils/: drivers.py  http.py
tests/: test_scrapy_middleware.py  test_spider.py
